--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "1.0.0",
   "description": "udraw application server",
   "main": "server.js",
-  "scripts": {"start": "node server.js",
+  "readme": "README.md",
+  "repository": "https://bitbucket.org/tsullivan/node-udraw",
+  "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "websocket"
+    "websocket", "redis", "drawing"
   ],
   "author": "Tim Sullivan",
   "license": "MIT",
   "dependencies": {
     "express": "^4.13.3",
-    "socket.io": "^1.3.7"
+    "redis": "^2.2.3",
+    "socket.io": "^1.3.7",
+    "socket.io-redis": "^0.1.4"
   }
 }
