--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "websocket", "redis", "drawing"
+    "websocket",
+    "redis",
+    "drawing"
   ],
   "author": "Tim Sullivan",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "morgan": "^1.6.1",
     "redis": "^2.2.3",
     "socket.io": "^1.3.7",
     "socket.io-redis": "^0.1.4"
