--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "redis": "^2.2.3",
     "socket.io": "^1.3.7",
     "socket.io-redis": "^0.1.4"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-uglify": "^1.4.2"
   }
 }
