--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "readme": "README.md",
   "repository": "https://bitbucket.org/tsullivan/node-udraw",
   "scripts": {
-    "start": "node server.js",
+    "production": "node server.js",
+    "start": "node server.js dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
