--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-eslint": "^1.1.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-uglify": "^1.4.2"
   }
