--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "express-rate-limit": "^2.0.2",
+    "fastclick": "^1.0.6",
     "jquery": "^2.1.4",
     "morgan": "^1.6.1",
     "redis": "^2.2.3",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-util": "^3.0.7",
     "uglify-loader": "^1.3.0",
