--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fastclick": "^1.0.6",
     "jquery": "^2.1.4",
     "morgan": "^1.6.1",
+    "pnotify": "github:sciactive/pnotify#4ca6d8089ec45997ae7be37efc51f1ddad336933",
     "redis": "^2.2.3",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
