--- a/package.json
+++ b/package.json
@@ -35,11 +35,15 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "browserify": "^13.0.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "uglify-loader": "^1.3.0",
-    "webpack": "^1.12.8"
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
