--- a/package.json
+++ b/package.json
@@ -19,20 +19,21 @@
   "license": "MIT",
   "dependencies": {
     "backbone": "^1.2.3",
-    "body-parser": "^1.14.1",
-    "ejs": "^2.3.4",
-    "express": "^4.13.3",
-    "express-rate-limit": "^2.0.2",
+    "body-parser": "^1.15.0",
+    "ejs": "^2.4.1",
+    "express": "^4.13.4",
+    "express-rate-limit": "^2.1.0",
     "fastclick": "^1.0.6",
-    "jquery": "^2.1.4",
+    "jquery": "^2.2.0",
     "morgan": "^1.6.1",
     "pnotify": "github:sciactive/pnotify#4ca6d8089ec45997ae7be37efc51f1ddad336933",
-    "redis": "^2.2.3",
-    "socket.io": "^1.3.7",
-    "socket.io-client": "^1.3.7",
-    "socket.io-redis": "^0.1.4",
+    "redis": "^2.4.2",
+    "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5",
+    "socket.io-redis": "^1.0.0",
     "spectrum-colorpicker": "^1.7.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
@@ -44,6 +45,7 @@
     "gulp-util": "^3.0.7",
     "uglify-loader": "^1.3.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^1.12.13"
   }
 }
