--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "jquery": "^2.2.0",
     "morgan": "^1.6.1",
     "pnotify": "github:sciactive/pnotify#4ca6d8089ec45997ae7be37efc51f1ddad336933",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "redis": "^2.4.2",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5",
@@ -36,14 +38,22 @@
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "browserify": "^13.0.0",
+    "css-loader": "^0.23.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
+    "node-sass": "^3.4.2",
     "opn": "^4.0.0",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
     "uglify-loader": "^1.3.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
