--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.6.1",
     "pnotify": "github:sciactive/pnotify#4ca6d8089ec45997ae7be37efc51f1ddad336933",
     "react": "^0.14.7",
+    "react-color": "^1.3.7",
     "react-dom": "^0.14.7",
     "redis": "^2.4.2",
     "socket.io": "^1.4.5",
