--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gulp-util": "^3.0.7",
     "node-sass": "^3.4.2",
     "opn": "^4.0.0",
+    "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "uglify-loader": "^1.3.0",
