--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "express-rate-limit": "^2.1.0",
     "fastclick": "^1.0.6",
     "jquery": "^2.2.0",
+    "lodash.range": "^3.1.3",
     "morgan": "^1.6.1",
     "pnotify": "github:sciactive/pnotify#4ca6d8089ec45997ae7be37efc51f1ddad336933",
     "react": "^0.14.7",
     "react-color": "^1.3.7",
     "react-dom": "^0.14.7",
+    "react-motion": "^0.3.1",
     "redis": "^2.4.2",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5",
