--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Multiplayer tiled canvas drawing platform",
   "main": "server.js",
   "readme": "README.md",
-  "repository": "https://bitbucket.org/tsullivan/node-udraw",
+  "repository": "https://bitbucket.org/tsullivan/udraw",
   "scripts": {
-    "start": "node server.js",
+    "start": "webpack-dev-server --content-base public --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -27,7 +27,6 @@
     "jquery": "^2.2.0",
     "lodash.range": "^3.1.3",
     "morgan": "^1.6.1",
-    "pnotify": "github:sciactive/pnotify#4ca6d8089ec45997ae7be37efc51f1ddad336933",
     "react": "^0.14.7",
     "react-color": "^1.3.7",
     "react-dom": "^0.14.7",
@@ -36,7 +35,6 @@
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5",
     "socket.io-redis": "^1.0.0",
-    "spectrum-colorpicker": "^1.7.1",
     "underscore": "^1.8.3",
     "webpack-dev-server": "^1.14.1"
   },
@@ -47,20 +45,10 @@
     "babel-preset-react": "^6.5.0",
     "browserify": "^13.0.0",
     "css-loader": "^0.23.1",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.1",
-    "gulp-util": "^3.0.7",
     "node-sass": "^3.4.2",
-    "opn": "^4.0.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
-    "uglify-loader": "^1.3.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
     "webpack": "^1.12.13"
   }
 }
