--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "readme": "README.md",
   "repository": "https://bitbucket.org/tsullivan/udraw",
   "scripts": {
-    "start": "webpack-dev-server --content-base public --hot",
+    "start": "node devServer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,10 +20,13 @@
   "dependencies": {
     "backbone": "^1.2.3",
     "body-parser": "^1.15.0",
+    "cors": "^2.7.1",
     "ejs": "^2.4.1",
+    "exports-loader": "^0.6.3",
     "express": "^4.13.4",
     "express-rate-limit": "^2.1.0",
     "fastclick": "^1.0.6",
+    "imports-loader": "^0.6.5",
     "jquery": "^2.2.0",
     "lodash.range": "^3.1.3",
     "morgan": "^1.6.1",
@@ -36,7 +39,8 @@
     "socket.io-client": "^1.4.5",
     "socket.io-redis": "^1.0.0",
     "underscore": "^1.8.3",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
