--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "repository": "https://bitbucket.org/tsullivan/udraw",
   "scripts": {
     "start": "node devServer.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:production": "webpack -p --config webpack.production.config.js"
   },
   "keywords": [
     "websocket",
