--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-preset-react": "^6.5.0",
     "browserify": "^13.0.0",
     "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.2",
