--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^0.14.7",
     "react-motion": "^0.3.1",
     "redis": "^2.4.2",
+    "redux": "^3.5.2",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5",
     "socket.io-redis": "^1.0.0",
