--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "https://bitbucket.org/tsullivan/udraw",
   "scripts": {
     "start": "node devServer.js",
+    "start:canvasapi": "node ",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:production": "webpack -p --config webpack.production.config.js"
   },
