--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node devServer.js",
     "start:canvasapi": "node ",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:production": "webpack -p --config webpack.production.config.js"
+    "build:production": "node_modules/.bin/webpack -p --config webpack.production.config.js"
   },
   "keywords": [
     "websocket",
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "connect-datadog": "0.0.6",
     "cors": "^2.7.1",
     "express": "^4.13.4",
     "express-rate-limit": "^2.1.0",
@@ -28,6 +29,7 @@
     "jquery": "^2.2.0",
     "lodash.range": "^3.1.3",
     "morgan": "^1.6.1",
+    "node-dogstatsd": "0.0.6",
     "react": "^0.14.7",
     "react-color": "^1.3.7",
     "react-dom": "^0.14.7",
