--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "udraw",
   "version": "1.0.0",
   "description": "Multiplayer tiled canvas drawing platform",
-  "main": "server.js",
+  "main": "server/index.js",
   "readme": "README.md",
-  "repository": "https://bitbucket.org/tsullivan/udraw",
+  "repository": "https://github.com/timatooth/udraw",
   "engines" : { "node" : ">=4.6.0" },
   "scripts": {
     "start": "node devServer.js",
@@ -21,15 +21,15 @@
   "author": "Tim Sullivan",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.15.0",
+    "body-parser": "^1.15.2",
     "connect-datadog": "0.0.6",
-    "cors": "^2.7.1",
-    "express": "^4.13.4",
-    "express-rate-limit": "^2.1.0",
+    "cors": "^2.8.1",
+    "express": "^4.14.0",
+    "express-rate-limit": "^2.5.0",
     "fastclick": "^1.0.6",
     "jquery": "^2.2.0",
     "lodash.range": "^3.1.3",
-    "morgan": "^1.6.1",
+    "morgan": "^1.7.0",
     "node-dogstatsd": "0.0.6",
     "react": "^15.3.2",
     "react-color": "1.3.8",
@@ -39,7 +39,7 @@
     "redux": "^3.6.0",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
-    "socket.io-redis": "^1.0.0",
+    "socket.io-redis": "^1.1.1",
     "underscore": "^1.8.3",
     "webpack-dev-server": "^1.16.1"
   },
