--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "server/index.js",
   "readme": "README.md",
   "repository": "https://github.com/timatooth/udraw",
-  "engines" : { "node" : ">=4.6.0" },
+  "engines": {
+    "node": ">=4.6.0"
+  },
   "scripts": {
     "start": "node devServer.js",
     "start:canvasapi": "node ",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:production": "node_modules/.bin/webpack -p --config webpack.production.config.js"
+    "build:production": "node_modules/.bin/webpack -p --config webpack.production.config.js --output-public-path https://cdn.udraw.me/static",
+    "build:staging": "node_modules/.bin/webpack -p --config webpack.production.config.js --output-public-path https://cdn.udraw.me/static-develop"
   },
   "keywords": [
     "websocket",
@@ -50,11 +53,12 @@
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.22.0",
+    "imports-loader": "^0.6.5",
     "node-sass": "^3.10.1",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.0",
-    "imports-loader": "^0.6.5",
     "webpack": "^1.13.0"
   }
 }
