--- a/package.json
+++ b/package.json
@@ -30,19 +30,19 @@
     "express": "^4.14.0",
     "express-rate-limit": "^2.5.0",
     "fastclick": "^1.0.6",
-    "jquery": "^2.2.0",
+    "jquery": "^3.1.1",
     "lodash.range": "^3.1.3",
     "morgan": "^1.7.0",
     "node-dogstatsd": "0.0.6",
     "react": "^15.3.2",
-    "react-color": "1.3.8",
+    "react-color": "^2.11.1",
     "react-dom": "^15.3.2",
     "react-motion": "0.3.1",
     "redis": "^2.4.2",
     "redux": "^3.6.0",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
-    "socket.io-redis": "^1.1.1",
+    "socket.io-redis": "^3.1.0",
     "underscore": "^1.8.3",
     "webpack-dev-server": "^1.16.1"
   },
@@ -51,11 +51,10 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
-    "imports-loader": "^0.6.5",
-    "node-sass": "^3.10.1",
+    "node-sass": "^4.3.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.0",
