--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash.range": "^3.1.3",
     "morgan": "^1.7.0",
     "node-dogstatsd": "0.0.6",
+    "raven": "^1.1.4",
     "react": "^15.3.2",
     "react-color": "^2.11.1",
     "react-dom": "^15.3.2",
