--- a/nginx.conf
+++ b/nginx.conf
@@ -8,22 +8,7 @@ upstream socketio {
 
 server {
   listen       *:80 80 http2;
-  #server_name  udraw.me;
-
-  #ssl on;
-
-  #ssl_certificate           /etc/letsencrypt/live/udraw.me/fullchain.pem;
-  #ssl_certificate_key       /etc/letsencrypt/live/udraw.me/privkey.pem;
-  ssl_session_cache         shared:SSL:10m;
-  ssl_session_timeout       5m;
-  ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
-  ssl_ciphers               ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS;
-  ssl_prefer_server_ciphers on;
-
-  index  index.html index.htm index.php;
-
-  access_log            /var/log/nginx/ssl-https_udraw.me.access.log combined;
-  error_log             /var/log/nginx/ssl-https_udraw.me.error.log;
+  index  index.html;
 
   location /canvases/ {
     proxy_pass            http://canvasapi;
@@ -51,7 +36,8 @@ server {
   }
 
   location / {
-    root      /opt/capistrano/udraw/current/public/;
+    root      /opt/udraw/public/
+    ;
     index     index.html index.htm index.php;
   }
 }
