--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "scripts": {
     "start": "node devServer.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:production": "node_modules/.bin/webpack -p --config webpack.production.config.js --output-public-path https://cdn.udraw.me/static/",
-    "build:staging": "node_modules/.bin/webpack -p --config webpack.production.config.js --output-public-path https://cdn.udraw.me/static-develop/"
+    "test": "echo \"Error: no test specified lol\" && exit 1",
+    "build:production": "node_modules/.bin/webpack -p --config webpack.production.config.js",
+    "build:staging": "node_modules/.bin/webpack -p --config webpack.production.config.js"
   },
   "keywords": [
     "websocket",
@@ -56,9 +56,7 @@
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
-    "node-sass": "^4.3.0",
     "react-hot-loader": "^1.3.0",
-    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.0",
     "webpack": "^2.2.0"
   }
