--- a/k8s-helm/templates/redis.yaml
+++ b/k8s-helm/templates/redis.yaml
@@ -1,24 +1,9 @@
 ---
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: pv0001
-spec:
-  storageClassName: manual
-  accessModes:
-    - ReadWriteOnce
-  capacity:
-    storage: 1Gi
-  hostPath:
-    path: /data/pv0001/
-
----
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: redis-data-claim
 spec:
-  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
@@ -44,10 +29,11 @@ spec:
     spec:
       containers:
       - name: redis
-        image: redis
+        image: redis:4
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 6379
+          name: redis
         volumeMounts:
         - mountPath: "/var/lib/redis"
           name: redis-data
@@ -67,3 +53,4 @@ spec:
   ports:
   - protocol: TCP
     port: 6379
+    containerPort: redis
