--- a/k8s-helm/Chart.yaml
+++ b/k8s-helm/Chart.yaml
@@ -1,15 +1,17 @@
 name: udraw
 version: 1.0.0
 description: A multiplayer HTML5 canvas drawing server
+icon: https://upload.wikimedia.org/wikipedia/commons/3/39/Paintbrushes.jpg
 keywords:
   - nodejs
   - canvas
   - redis
+  - websocket
 home: https://udraw.me
 sources:
   - https://github.com/timatooth/udraw
 maintainers:
   - name: Tim Sullivan
     email: tsullivan@timatooth.com
-    url: http://timatooth.com
+    url: https://timatooth.com
 engine: gotpl
