--- a/k8s-helm/values.yaml
+++ b/k8s-helm/values.yaml
@@ -16,6 +16,6 @@ storage:
 
   s3:
     region: 'ap-southeast-2'
-    bucket: 'my-tiles-bucket'
+    bucket: ''
     AWS_ACCESS_KEY_ID: ''
     AWS_SECRET_ACCESS_KEY: ''
