--- a/k8s-helm/templates/redis-service.yaml
+++ b/k8s-helm/templates/redis-service.yaml
@@ -8,6 +8,7 @@ metadata:
     chart: {{ template "udraw.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    componenet: canvasapi
 spec:
   selector:
     app: {{ .Release.Name }}-redis
