--- a/k8s-helm/requirements.yaml
+++ b/k8s-helm/requirements.yaml
@@ -1,5 +1,5 @@
 dependencies:
   - name: nginx-ingress
-    condition: ingress.nginxIngressEnabled
-    version: 0.20.3
+    condition: ingress.install
+    version: 0.25.1
     repository: https://kubernetes-charts.storage.googleapis.com/
