--- a/k8s-helm/templates/udraw-ingress.yaml
+++ b/k8s-helm/templates/udraw-ingress.yaml
@@ -4,6 +4,10 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{.Release.Name}}-udraw
+  labels:
+    chart: {{ template "udraw.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
   annotations:
    {{- range $key, $value := .Values.ingress.annotations }}
      {{ $key }}: {{ $value | quote }}
