--- a/k8s-helm/templates/udraw-websocket-service.yaml
+++ b/k8s-helm/templates/udraw-websocket-service.yaml
@@ -3,6 +3,12 @@ kind: Service
 apiVersion: v1
 metadata:
   name: {{.Release.Name}}-udrawwebsocket
+  labels:
+    app: {{ .Release.Name }}-udrawwebsocket
+    chart: {{ template "udraw.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+    componenet: websocket
 spec:
   selector:
     app: {{.Release.Name}}-udrawwebsocket
