--- a/k8s-helm/values.yaml
+++ b/k8s-helm/values.yaml
@@ -5,27 +5,31 @@ imagePullPolicy: Always
 
 canvasapi:
   replicas: 2
+
 websocket:
+  # We are currently limited here due to socket.io
+  # redis-pub-sub adapter is one option.
+  # I might consider NATS messaging server
   replicas: 1
 
-# I use
 ingress:
   # install stable/nginx-ingress helm chart with this release
   # see 'nginx-ingress' section for configuration
-  nginxIngressEnabled: true
+  install: true
   # create an Ingress rule for udraw
   enabled: true
   # URL to address your udraw installation
-  hostname: udraw.local
+  hostname: udraw.me
   annotations:
     kubernetes.io/ingress.class: nginx
 
 #### Nginx Ingress Controller subchart settings
-# only applys if you have set "installNginxIngress: true"
+# This only applys if you have set "ingress.install: true"
 nginx-ingress:
   controller:
+    # Bind port 80, 443 to the host machine
+    hostNetwork: true
     service:
-      # how udraw is exposed
       type: NodePort
 
 # udraw tile persistent storage
