--- a/k8s-helm/templates/udraw-secrets.yaml
+++ b/k8s-helm/templates/udraw-secrets.yaml
@@ -4,6 +4,10 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{.Release.Name}}-s3-secret
+  labels:
+    chart: {{ template "udraw.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 type: Opaque
 data:
   AWS_ACCESS_KEY_ID: {{ .Values.storage.s3.AWS_ACCESS_KEY_ID | b64enc }}
