--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
+    "serverless-apigwy-binary": "^1.0.0",
     "serverless-http": "^1.9.0"
   }
 }
