--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
-    "serverless-apigwy-binary": "^1.0.0",
     "serverless-http": "^1.9.0"
+  },
+  "devDependencies": {
+    "serverless-apigw-binary": "^0.4.4"
   }
 }
