--- a/server/serverless.yml
+++ b/server/serverless.yml
@@ -1,27 +1,12 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
-
-service: udraw-canvasapi # NOTE: update this with your service name
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
+service: udraw-canvasapi
 
 plugins:
-  - serverless-apigwy-binary
+  # https://www.npmjs.com/package/serverless-apigw-binary
+  - serverless-apigw-binary
 
 provider:
   name: aws
+  endpointType: REGIONAL
   runtime: nodejs8.10
   region: ap-southeast-2
   stage: dev
@@ -50,56 +35,40 @@ provider:
 #    - exclude-me.js
 #    - exclude-me-dir/**
 
+custom:
+  # https://www.npmjs.com/package/serverless-apigw-binary
+  apigwBinary:
+    types:
+      - '*/*'
+
 functions:
   canvas:
+    description: Function for Udraw Canvas Tile API
+    memorySize: 128
     handler: handler.main
     events:
       - http:
-          path: /
-          method: ANY
+          path: /{proxy+}
+          method: GET
           cors: true
-          contentHandling: CONVERT_TO_BINARY
+          #contentHandling: CONVERT_TO_BINARY
       - http:
           path: /{proxy+}
-          method: ANY
+          method: PUT
           cors: true
-          contentHandling: CONVERT_TO_BINARY
-
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
+          #contentHandling: CONVERT_TO_BINARY
+      - http:
+          path: /{proxy+}
+          method: OPTIONS
+          cors: true
 
 #    Define function environment variables here
 #    environment:
 #      variable2: value2
 
 # you can add CloudFormation resource templates here
-#resources:
+resources:
+  Description: udraw Canvas Tile API serverless stack
 #  Resources:
 #    NewResource:
 #      Type: AWS::S3::Bucket
