--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "serverless-http": "^1.9.0"
   },
   "devDependencies": {
-    "serverless-apigw-binary": "^0.4.4"
+    "serverless-apigw-binary": "^0.4.4",
+    "serverless-s3-sync": "^1.7.2"
   }
 }
