--- a/server/serverless.yml
+++ b/server/serverless.yml
@@ -1,9 +1,8 @@
 service: udraw-canvasapi
 
 plugins:
-  # https://www.npmjs.com/package/serverless-apigw-binary
   - serverless-apigw-binary
-
+  - serverless-s3-sync
 provider:
   name: aws
   endpointType: REGIONAL
@@ -40,6 +39,11 @@ custom:
   apigwBinary:
     types:
       - '*/*'
+  siteName: udraw.me
+  siteAcmArn: 'arn:aws:acm:us-east-1:644068571316:certificate/e6c100e3-d2db-4794-9310-87b9071a3f55'
+  s3Sync:
+    - bucketName: ${self:custom.siteName}
+      localDir: ../public
 
 functions:
   canvas:
@@ -69,11 +73,72 @@ functions:
 # you can add CloudFormation resource templates here
 resources:
   Description: udraw Canvas Tile API serverless stack
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
+
+  Resources:
+    StaticSite:
+      Type: AWS::S3::Bucket
+      Properties:
+        AccessControl: PublicRead
+        BucketName: ${self:custom.siteName}
+        WebsiteConfiguration:
+          IndexDocument: index.html
+    StaticSiteS3BucketPolicy:
+      Type: AWS::S3::BucketPolicy
+      Properties:
+        Bucket:
+          Ref: StaticSite
+        PolicyDocument:
+          Statement:
+            - Sid: PublicReadGetObject
+              Effect: Allow
+              Principal: "*"
+              Action:
+              - s3:GetObject
+              Resource:
+                Fn::Join: [
+                  "", [
+                    "arn:aws:s3:::",
+                    {
+                      "Ref": "StaticSite"
+                    },
+                    "/*"
+                  ]
+                ]
+    staticfiledistribution:
+      Type: AWS::CloudFront::Distribution
+      Properties:
+        DistributionConfig:
+          IPV6Enabled: true
+          HttpVersion: http2
+          Origins:
+          - DomainName:
+              Fn::GetAtt:
+                - StaticSite
+                - DomainName
+            Id: udrawstaticS3Origin
+            S3OriginConfig:
+              OriginAccessIdentity: ''
+          Enabled: 'true'
+          Comment: 'Index and static access for udraw'
+          DefaultRootObject: index.html
+          Aliases:
+          - ${self:custom.siteName}
+          DefaultCacheBehavior:
+            AllowedMethods:
+            - HEAD
+            - GET
+            - OPTIONS
+            TargetOriginId: udrawstaticS3Origin
+            ForwardedValues:
+              QueryString: 'false'
+              Cookies:
+                Forward: none
+            ViewerProtocolPolicy: allow-all
+          PriceClass: PriceClass_All
+          ViewerCertificate:
+            AcmCertificateArn: ${self:custom.siteAcmArn}
+            SslSupportMethod: 'sni-only'
+            MinimumProtocolVersion: 'TLSv1.1_2016'
 #  Outputs:
 #     NewOutput:
 #       Description: "Description for the output"
