Frontend build going with webpack 5

--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,7 @@
-{ "presets": ["es2015", "react"] }
+{
+    "presets": [
+      ["@babel/preset-react", {
+        "runtime": "automatic"
+      }]
+    ]
+  }
