--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   "author": "Tim Sullivan",
   "license": "MIT",
   "dependencies": {
+    "@babel/preset-react": "^7.12.1",
     "aws-sdk": "^2.207.0",
     "body-parser": "^1.15.2",
     "connect-datadog": "0.0.6",
     "cors": "^2.8.1",
-    "express": "^4.14.0",
+    "express": "^4.17.1",
     "express-rate-limit": "^2.11.0",
     "fastclick": "^1.0.6",
     "jquery": "^3.5.0",
@@ -37,28 +38,33 @@
     "morgan": "^1.9.1",
     "node-dogstatsd": "0.0.6",
     "raven": "^2.4.2",
-    "react": "^15.3.2",
-    "react-color": "^2.14.0",
-    "react-dom": "^15.3.2",
-    "react-motion": "0.3.1",
+    "react": "^17.0.1",
+    "react-color": "^2.19.3",
+    "react-dom": "^17.0.1",
+    "react-motion": "0.5.2",
     "redis": "^2.4.2",
     "redux": "^3.6.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "socket.io-redis": "^5.2.0",
-    "underscore": "^1.8.3",
-    "webpack-dev-server": "^3.1.11"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "babel-core": "^6.16.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "css-loader": "^3.2.0",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
-    "react-hot-loader": "^1.3.0",
-    "style-loader": "^0.13.0",
-    "webpack": "^2.2.0"
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.0",
+    "jsxobj": "^1.1.0",
+    "react-hot-loader": "^4.13.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.3.2",
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-middleware": "^4.0.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
