--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "jquery": "^3.5.0",
     "react": "^17.0.1",
     "react-color": "^2.19.3",
-    "react-dom": "^17.0.1",
-    "underscore": "^1.8.3"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
