--- a/.github/workflows/serverless.yml
+++ b/.github/workflows/serverless.yml
@@ -18,11 +18,11 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    #- run: npm ci
     - name: serverless deploy
-      uses: serverless/github-action@v3.1
+      uses: serverless/github-action@v3.2
       with:
-        args: deploy
+        args: -c "cd ./server && serverless deploy"
+        entrypoint: /bin/sh
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
