--- a/.github/workflows/serverless.yml
+++ b/.github/workflows/serverless.yml
@@ -21,7 +21,7 @@ jobs:
     - name: serverless deploy
       uses: serverless/github-action@v3.2
       with:
-        args: -c "cd ./server && serverless deploy"
+        args: -c "cd ./server && serverless plugin install -n serverless-apigw-binary && serverless deploy"
         entrypoint: /bin/sh
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
