--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "watch": "webpack --watch",
-    "start": "webpack serve",
-    "server": "node server.js"
+    "start": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -21,22 +19,7 @@
   },
   "homepage": "https://github.com/timatooth/udraw#readme",
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "babel-loader": "^8.1.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.0",
-    "jsxobj": "^1.1.0",
-    "react-hot-loader": "^4.13.0",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.3.2",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-middleware": "^4.0.0",
-    "webpack-dev-server": "^3.11.0"
+    "esbuild": "0.24.0"
   },
   "dependencies": {
     "peerjs": "^1.3.1",
