--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -38,9 +38,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Elixir
-      uses: erlef/setup-beam@61e01a43a562a89bfc54c7f9a378ff67b03e4a21 # v1.16.0
+      uses: erlef/setup-beam@v1.18.2
       with:
-        elixir-version: '1.17.7' # [Required] Define the Elixir version
+        elixir-version: '1.17' # [Required] Define the Elixir version
         otp-version: '27.1'      # [Required] Define the Erlang/OTP version
     - name: Restore dependencies cache
       uses: actions/cache@v3
