--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -1,8 +1,10 @@
 name: Fly Deploy
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: ["Elixir CI"]
+    branches: [master]
+    types: 
+      - completed
 jobs:
   deploy:
     name: Deploy app
