Sqlite for dev/test cause pg no good on GH actions

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -20,23 +20,24 @@ jobs:
     name: Build and test
     runs-on: ubuntu-latest
 
-    services:
+    #services:
       # Label used to access the service container
-      postgres:
-        # Docker Hub image
-        image: postgres:17-alpine
-        # Provide the password for postgres
-        env:
-          POSTGRES_PASSWORD: foobar1234t3t4turboxyz
-        # Set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          # Maps tcp port 5432 on service container to the host
-          - 5432:5432
+      # Doesn't work, nxdomain for some reason...
+      # postgres:
+      #   # Docker Hub image
+      #   image: postgres:17-alpine
+      #   # Provide the password for postgres
+      #   env:
+      #     POSTGRES_PASSWORD: foobar1234t3t4turboxyz
+      #   # Set health checks to wait until postgres has started
+      #   options: >-
+      #     --health-cmd pg_isready
+      #     --health-interval 10s
+      #     --health-timeout 5s
+      #     --health-retries 5
+      #   ports:
+      #     # Maps tcp port 5432 on service container to the host
+      #     - 5432:5432
 
     steps:
     - uses: actions/checkout@v4
