--- a/fly.toml
+++ b/fly.toml
@@ -13,7 +13,7 @@ kill_signal = 'SIGTERM'
   release_command = '/app/bin/migrate'
 
 [env]
-  PHX_HOST = 'udraw.fly.dev'
+  PHX_HOST = 'udraw.me'
   PORT = '8080'
 
 [http_service]
